Sync all content

--- a/content/resources/1-151s05-th.md
+++ b/content/resources/1-151s05-th.md
@@ -10,6 +10,8 @@ image_metadata:
   credit: ''
   image-alt: A photograph of a bridge failure in progress.  Half of the bridge has
     been washed away and the remaning structure appears to be crumbling.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 1-151s05-th.jpg
 uid: 22663ab0-a522-05cc-4d1a-4357763adb91
