--- a/content/resources/1-151s05.md
+++ b/content/resources/1-151s05.md
@@ -12,6 +12,8 @@ image_metadata:
   credit: ''
   image-alt: A photograph of a bridge failure in progress.  Half of the bridge has
     been washed away and the remaning structure appears to be crumbling.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 1-151s05.jpg
 uid: cc0e239e-2d73-0454-4598-67f54eedd719
