--- a/content/resources/quiz_1_2005.md
+++ b/content/resources/quiz_1_2005.md
@@ -3,6 +3,11 @@ content_type: resource
 description: Short answer and problem solving exercises.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/1-151-probability-and-statistics-in-engineering-spring-2005/ff46f197adda3cbe2be9e24765637dcb_quiz_1_2005.pdf
 file_type: application/pdf
+learning_resource_types:
+- Exams
+ocw_type: OCWFile
+parent_title: Exams
+parent_type: CourseSection
 parent_uid: 0a832fec-dcaa-353d-2bad-757b0fe9dd1c
 resourcetype: Document
 title: quiz_1_2005.pdf
